change container widths to 95% on mobile to accomodate twitter sidebar with bug

--- a/src/App.scss
+++ b/src/App.scss
@@ -130,8 +130,11 @@ ul.pagination {
   }
 
   .container {
-    padding-left: 10px !important;
-    padding-right: 10px !important;
+    padding-left: 0px !important;
+    padding-right: 0px !important;
+    width: 95% !important;
+    margin-left: auto;
+    margin-right: auto;
   }
 
   .col-md-8-img {
