--- a/src/sass/welcome.scss
+++ b/src/sass/welcome.scss
@@ -445,6 +445,14 @@
     }
   }
 
+  .container.pundits {
+    padding-left: 10px !important;
+    padding-right: 10px !important;
+
+    .category-blog.col-md-3.col-sm-6.col-xs-12 a {
+      padding: 5px !important
+    }
+  }
 
   .welcome-container .container {
     padding: 0px;
